fix: header scroll jumping

--- a/src/shared/components/common/Header/header.module.scss
+++ b/src/shared/components/common/Header/header.module.scss
@@ -26,7 +26,7 @@
 		height: 100px;
 
 		&.padding {
-			padding-bottom: 50px;
+			padding-bottom: 120px;
 		}
 	}
 }
